--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.0.0",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "recharts": "^2.6.2",
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
