--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-countup": "^6.4.2",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.11.1",
