--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.11.1",
     "recharts": "^2.6.2",
-    "seedrandom": "^3.0.5"
+    "seedrandom": "^3.0.5",
+    "use-long-press": "^3.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
