--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.0.1",
+    "@ant-design/icons": "^5.1.4",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
-    "@headlessui/react": "^1.7.14",
+    "@headlessui/react": "^1.7.15",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.16",
     "@types/react-copy-to-clipboard": "^5.0.4",
-    "antd": "^5.4.7",
+    "antd": "^5.6.1",
     "bizcharts": "^4.1.22",
-    "cdbreact": "^1.5.14",
-    "dayjs": "^1.11.7",
+    "cdbreact": "^1.5.17",
+    "dayjs": "^1.11.8",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
+    "rc-picker": "^3.8.2",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-countup": "^6.4.2",
@@ -31,23 +32,24 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-pro-sidebar": "^1.0.0",
-    "react-router-dom": "^6.11.1",
-    "recharts": "^2.6.2",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-router-dom": "^6.13.0",
+    "recharts": "^2.7.0",
     "seedrandom": "^3.0.5",
-    "use-long-press": "^3.1.4"
+    "use-long-press": "^3.1.5"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react-swc": "^3.0.0",
+    "@faker-js/faker": "^8.0.2",
+    "@types/react": "^18.2.12",
+    "@types/react-dom": "^18.2.5",
+    "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
+    "eslint": "^8.42.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "postcss": "^8.4.23",
+    "eslint-plugin-react-refresh": "^0.4.1",
+    "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.9"
   }
 }
