--- a/package.json
+++ b/package.json
@@ -14,13 +14,10 @@
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@headlessui/react": "^1.7.15",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.11.16",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "antd": "^5.6.1",
     "bizcharts": "^4.1.22",
-    "cdbreact": "^1.5.17",
     "dayjs": "^1.11.8",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
@@ -32,7 +29,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
     "recharts": "^2.7.0",
     "seedrandom": "^3.0.5",
