--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prop-types": "^15.8.1",
     "rc-picker": "^3.8.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-countup": "^6.4.2",
     "react-dnd": "^16.0.1",
