--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
     "recharts": "^2.7.0",
+    "replace-in-file": "^7.0.1",
     "seedrandom": "^3.0.5",
     "use-long-press": "^3.1.5"
   },
