--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "antd": "^5.6.1",
     "bizcharts": "^4.1.22",
     "dayjs": "^1.11.8",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "rc-picker": "^3.8.2",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.12.3",
     "react-beautiful-dnd": "^13.1.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-countup": "^6.4.2",
@@ -31,10 +34,11 @@
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
-    "react-router-dom": "^6.13.0",
+    "react-router-dom": "^6.14.0",
     "recharts": "^2.7.0",
     "replace-in-file": "^7.0.1",
     "seedrandom": "^3.0.5",
+    "sort-by": "^1.2.0",
     "use-long-press": "^3.1.5"
   },
   "devDependencies": {
@@ -50,5 +54,8 @@
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
+  },
+  "peerDependencies": {
+    "react-router-dom": "^6.14.0"
   }
 }
